# cuality

./: .gitignore  README.md  analyze.py  classes-uml.sh  pyproject.toml
cuality/: analyze.py  feature_delivery.py  github.py  lint_ignores.py  main.py
tests/: test_lint_ignores.py
