[tool.poetry]
name = "cuality"
version = "0.1.0"
description = "Python projects analysis"
authors = ["Nikita Gladkikh <gladkikh.nikita@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pylint = "^3.1.0"
numpy = "^1.26.4"
click = "^8.1.7"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.9.0"
typing-extensions = "^4.10.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
feature-delivery = "cuality.main:cli"